# plugin-GUI

./: .clang-format  .gitignore  .gitmodules  AUTHORS.md  CMAKE_README.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HelperFunctions.cmake  README  README.md  README.rst  arte.jucer  astyle.options  fix-build-error_gcc6205.txt  leetcode  open-ephys.jucer
Plugins/: CMakeLists.txt  PluginRules.cmake
Plugins/ArduinoOutput/: ArduinoOutput.cpp  ArduinoOutput.h  ArduinoOutputEditor.cpp  ArduinoOutputEditor.h  CMakeLists.txt  OpenEphysLib.cpp
Plugins/BandpassFilter/: BandpassFilter.cpp  BandpassFilter.h  BandpassFilterEditor.cpp  BandpassFilterEditor.h  CMakeLists.txt  OpenEphysLib.cpp
Plugins/BasicSpikeDisplay/: CMakeLists.txt  OpenEphysLib.cpp
Plugins/BinaryFormat/: CMakeLists.txt
Plugins/CAR/: CAR.cpp  CAR.h  CAREditor.cpp  CAREditor.h  CMakeLists.txt
Plugins/ChannelMap/: CMakeLists.txt  ChannelMap.cpp  ChannelMap.h  ChannelMapActions.cpp  ChannelMapActions.h  ChannelMapEditor.cpp  ChannelMapEditor.h  OpenEphysLib.cpp  PrbFormat.h
Plugins/ChannelMappingNode/: CMakeLists.txt  ChannelMappingEditor.cpp  ChannelMappingEditor.h  ChannelMappingNode.cpp  ChannelMappingNode.h  ChannelMappingNodeActions.cpp  ChannelMappingNodeActions.h  OpenEphysLib.cpp  PrbFormat.h
Plugins/CommonAverageRef/: CMakeLists.txt  CommonAverageRef.cpp  CommonAverageRef.h  CommonAverageRefEditor.cpp  CommonAverageRefEditor.h  OpenEphysLib.cpp
Plugins/CommonAvgRef/: CMakeLists.txt  CommonAvgRef.cpp  CommonAvgRef.h  CommonAvgRefEditor.cpp  CommonAvgRefEditor.h  OpenEphysLib.cpp
Plugins/EcubeSource/: EcubeEditor.cpp  EcubeEditor.h  EcubeThread.h  OpenEphysLib.cpp
Plugins/EphysSocket/: CMakeLists.txt  EphysSocket.cpp  EphysSocket.h  EphysSocketEditor.cpp  EphysSocketEditor.h  OpenEphysLib.cpp
Plugins/EventDetector/: EventDetector.cpp  EventDetector.h
Plugins/EventNode/: EventNode.cpp  EventNode.h  EventNodeEditor.cpp
Plugins/EvntTrigAvg/: CMakeLists.txt  EvntTrigAvg.cpp  EvntTrigAvg.h
Plugins/FilterNode/: CMakeLists.txt  FilterEditor.cpp  FilterEditor.h  FilterNode.cpp  FilterNode.h  OpenEphysLib.cpp
Plugins/Headers/: AllLookAndFeels.h  BasicJuceHeader.h  CommonLibHeader.h  CoreServicesHeader.h  DataThreadHeaders.h  DspLib.h  EditorHeaders.h  FileSourceHeaders.h  Logging.h  PluginInfo.h  ProcessorHeaders.h  RecordingLib.h  SerialLib.h  SpikeLib.h  UIUtilitiesHeaders.h  VisualizerEditorHeaders.h  VisualizerWindowHeaders.h
Plugins/IntanRecordingController/: CMakeLists.txt  Makefile  OpenEphysLib.cpp  RHD2000Editor.cpp  RHD2000Editor.h  RHD2000Thread.cpp  RHD2000Thread.h
Plugins/JuliaProcessor/: JuliaEditor.cpp  exampleProcessor.jl
Plugins/LfpDisplayNode/: CMakeLists.txt  DisplayBuffer.cpp  DisplayBuffer.h  EventDisplayInterface.cpp  EventDisplayInterface.h  LfpBitmapPlotter.h  LfpBitmapPlotterInfo.h  LfpChannelColourScheme.cpp  LfpChannelColourScheme.h  LfpChannelDisplay.cpp  LfpChannelDisplay.h  LfpChannelDisplayInfo.cpp  LfpChannelDisplayInfo.h  LfpDefaultColourScheme.cpp  LfpDefaultColourScheme.h  LfpDisplay.cpp  LfpDisplay.h  LfpDisplayCanvas.cpp  LfpDisplayCanvas.h  LfpDisplayCanvas.h.orig  LfpDisplayClasses.h  LfpDisplayEditor.cpp  LfpDisplayEditor.h  LfpDisplayNode.cpp  LfpDisplayNode.h  LfpDisplayOptions.cpp  LfpDisplayOptions.h  LfpGradientColourScheme.cpp  LfpGradientColourScheme.h  LfpMonochromaticColourScheme.cpp  LfpMonochromaticColourScheme.h  LfpTimescale.cpp  LfpTimescale.h  LfpViewport.cpp  LfpViewport.h  OpenEphysLib.cpp  PerPixelBitmapPlotter.cpp  PerPixelBitmapPlotter.h  ShowHideOptionsButton.cpp  ShowHideOptionsButton.h  (+3 more)
Plugins/LfpDisplayNodeBeta/: CMakeLists.txt  EventDisplayInterface.cpp  EventDisplayInterface.h  LfpChannelDisplay.cpp  LfpChannelDisplay.h  LfpDisplay.cpp  LfpDisplay.h  LfpDisplayCanvas.cpp  LfpDisplayCanvas.h  LfpDisplayCanvasElements.cpp  LfpDisplayCanvasElements.h  LfpDisplayEditor.h  LfpDisplayNode.cpp  LfpDisplayNode.h  LfpDisplayOptions.cpp  LfpDisplayOptions.h  OpenEphysLib.cpp
Plugins/LfpViewer/: CMakeLists.txt  DisplayBuffer.cpp  DisplayBuffer.h  EventDisplayInterface.cpp  EventDisplayInterface.h  LfpBitmapPlotter.h  LfpBitmapPlotterInfo.h  LfpChannelDisplay.cpp  LfpChannelDisplay.h  LfpChannelDisplayInfo.cpp  LfpChannelDisplayInfo.h  LfpDisplay.cpp  LfpDisplay.h  LfpDisplayCanvas.cpp  LfpDisplayCanvas.h  LfpDisplayClasses.h  LfpDisplayEditor.cpp  LfpDisplayEditor.h  LfpDisplayNode.cpp  LfpDisplayNode.h  LfpDisplayOptions.cpp  LfpDisplayOptions.h  LfpTimescale.cpp  LfpTimescale.h  LfpViewport.cpp  LfpViewport.h  OpenEphysLib.cpp  PerPixelBitmapPlotter.cpp  PerPixelBitmapPlotter.h  ShowHideOptionsButton.cpp  ShowHideOptionsButton.h  SupersampledBitmapPlotter.cpp  SupersampledBitmapPlotter.h
Plugins/Neuropix3aPlugin/: CMakeLists.txt
Plugins/PhaseDetector/: CMakeLists.txt  OpenEphysLib.cpp  PhaseDetector.cpp  PhaseDetector.h  PhaseDetectorEditor.cpp  PhaseDetectorEditor.h
Plugins/PulsePalOutput/: CMakeLists.txt  OpenEphysLib.cpp  PulsePalOutput.cpp  PulsePalOutput.h  PulsePalOutputCanvas.h  PulsePalOutputEditor.cpp  PulsePalOutputEditor.h
Plugins/RecordControl/: CMakeLists.txt  OpenEphysLib.cpp  RecordControl.cpp  RecordControl.h  RecordControlEditor.cpp  RecordControlEditor.h
Plugins/RecordNode/: BinaryRecording.cpp  BinaryRecording.h  CMakeLists.txt  DataQueue.h  FileMemoryBlock.h  NpyFile.h  OpenEphysLib.cpp  OriginalRecording.h  RecordChannelSelector.h  RecordEngine.cpp  RecordEngine.h  RecordNode.cpp  RecordNode.h  RecordNodeEditor.cpp  RecordNodeEditor.h  RecordThread.cpp  RecordThread.h  SequentialBlockFile.h  Utils.h
Plugins/Rectifier/: CMakeLists.txt
Plugins/RhythmNode/: CMakeLists.txt  RHD2000Editor.cpp  RHD2000Editor.h  RHD2000Thread.cpp  RHD2000Thread.h
Plugins/SerialInput/: CMakeLists.txt  (+3 more)
Source/: AccessClass.cpp  AccessClass.h  AutoUpdater.cpp  AutoUpdater.h  CMakeLists.txt  CoreServices.cpp  CoreServices.h  Doxyfile  DoxygenMainPage.h  Main.cpp  MainWindow.cpp  MainWindow.h  OpenGL.h  TestableExport.h  glWinInit.h
TestHelpers/: CMakeLists.txt
Tests/: CMakeLists.txt  ComponentRules.cmake
(+5237 files in other folders)
