#Open Ephys GUI direcroty-specific file

#add files in this folder


#add nested directories
add_subdirectory(AudioNode)
add_subdirectory(AudioResamplingNode)
add_subdirectory(Channel)
add_subdirectory(DataThreads)
add_subdirectory(Dsp)
add_subdirectory(Editors)
add_subdirectory(Events)
add_subdirectory(FileReader)
add_subdirectory(GenericProcessor)
add_subdirectory(Merger)
add_subdirectory(MessageCenter)
add_subdirectory(Parameter)
add_subdirectory(PlaceholderProcessor)
add_subdirectory(PluginManager)
add_subdirectory(ProcessorGraph)
add_subdirectory(ProcessorManager)
add_subdirectory(RecordNode)
add_subdirectory(Serial)
add_subdirectory(SourceNode)
add_subdirectory(Splitter)
add_subdirectory(Visualization)


